--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
     "index": "./src/index.js"
   },
   "dependencies": {
-    "antd": "^2.6.3",
+    "antd": "^2.7.0",
     "classnames": "^2.2.5",
     "dva": "^1.1.0",
     "dva-loading": "^0.2.0",
     "js-cookie": "^2.1.3",
     "qs": "^6.2.0",
+    "rc-queue-anim": "^0.13.0",
+    "rc-tween-one": "^1.0.0",
     "react": "^15.4.1",
     "react-countup": "^1.3.0",
     "react-dom": "^15.4.1",
@@ -24,11 +26,11 @@
     "babel-plugin-import": "^1.0.1",
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-runtime": "^6.9.2",
-    "dora": "0.3.x",
+    "dora": "^0.4.3",
     "dora-plugin-browser-history": "^0.2.0",
-    "dora-plugin-proxy": "^0.7.0",
-    "dora-plugin-webpack": "0.6.x",
-    "dora-plugin-webpack-hmr": "^0.1.0",
+    "dora-plugin-proxy": "^0.8.5",
+    "dora-plugin-webpack": "^0.8.1",
+    "dora-plugin-webpack-hmr": "^0.2.1",
     "eslint": "^2.13.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.8.1",
@@ -37,9 +39,7 @@
     "glob": "^7.0.5",
     "mockjs": "^1.0.1-beta3",
     "path-to-regexp": "^1.7.0",
-    "react-router": "^3.0.2",
     "redbox-react": "^1.2.10",
-    "reselect": "^2.5.4",
     "robe-ajax": "^1.0.0",
     "watchjs": "^0.0.0"
   },
