browserHistory dynamic load

--- a/package.json
+++ b/package.json
@@ -44,10 +44,10 @@
     "watchjs": "^0.0.0"
   },
   "scripts": {
-    "dev": "dora --plugins \"webpack?config=conf/webpack.config.js,webpack-hmr,browser-history?index=/src/index.html\"",
-    "build-dev": "atool-build --devtool #eval --config conf/webpack.config.js",
-    "build-staging": "atool-build --devtool #eval --config conf/webpack.config.staging.js",
-    "build-release": "atool-build --config conf/webpack.config.release.js",
+    "dev": "dora --plugins \"webpack?config=conf/webpack.config.js&publicPath=/,webpack-hmr,browser-history?index=/src/index.html\"",
+    "build-dev": "atool-build --config conf/webpack.config.js --publicPath /",
+    "build-staging": "atool-build --config conf/webpack.config.staging.js --publicPath /",
+    "build-release": "atool-build --config conf/webpack.config.release.js --publicPath /",
     "start": "dora --plugins \"proxy,webpack,webpack-hmr\"",
     "lint": "eslint --fix --ext .js,.jsx src/components/layout"
   },
