--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "classnames": "^2.2.5",
     "dva": "^1.1.0",
     "dva-loading": "^0.2.0",
+    "immutable": "^3.8.1",
     "js-cookie": "^2.1.3",
+    "moment": "^2.17.1",
     "qs": "^6.2.0",
     "rc-queue-anim": "^0.13.0",
     "rc-tween-one": "^1.0.0",
     "react": "^15.4.1",
     "react-countup": "^1.3.0",
     "react-dom": "^15.4.1",
-    "recharts": "^0.19.0"
+    "recharts": "^0.19.0",
+    "reselect": "^2.5.4"
   },
   "devDependencies": {
     "atool-build": "^0.7.6",
