--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dva-loading": "^0.2.0",
     "immutable": "^3.8.1",
     "js-cookie": "^2.1.3",
+    "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "qs": "^6.2.0",
     "rc-queue-anim": "^0.13.0",
@@ -17,6 +18,7 @@
     "react": "^15.4.1",
     "react-countup": "^1.3.0",
     "react-dom": "^15.4.1",
+    "react-media-player": "^0.6.1",
     "recharts": "^0.19.0",
     "reselect": "^2.5.4"
   },
@@ -28,6 +30,7 @@
     "babel-plugin-dva-hmr": "^0.1.0",
     "babel-plugin-import": "^1.0.1",
     "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-polyfill": "^6.23.0",
     "babel-runtime": "^6.9.2",
     "dora": "^0.4.3",
     "dora-plugin-browser-history": "^0.2.0",
