--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-countup": "^1.3.0",
     "react-dom": "^15.4.1",
     "react-media-player": "^0.6.1",
+    "react-motion-ui-pack": "^0.10.2",
     "recharts": "^0.19.0",
     "reselect": "^2.5.4"
   },
