--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^15.4.1",
     "react-countup": "^1.3.0",
     "react-dom": "^15.4.1",
+    "react-lz-editor": "^0.10.9",
     "react-media-player": "^0.6.1",
     "react-motion-ui-pack": "^0.10.2",
     "recharts": "^0.19.0",
