--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "index": "./src/index.js"
   },
   "dependencies": {
-    "antd": "^2.11.1",
+    "antd": "^2.11.0",
     "classnames": "^2.2.5",
     "dva": "^1.1.0",
     "dva-loading": "^0.2.0",
@@ -12,6 +12,7 @@
     "js-cookie": "^2.1.3",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
+    "prop-types": "^15.5.10",
     "qs": "^6.2.0",
     "rc-queue-anim": "^0.13.0",
     "rc-tween-one": "^1.0.0",
