--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react": "^15.4.1",
     "react-countup": "^1.3.0",
     "react-dom": "^15.4.1",
-    "react-lz-editor": "^0.10.15",
+    "react-lz-editor": "^0.10.16",
     "react-media-player": "^0.6.1",
     "react-motion-ui-pack": "^0.10.2",
     "recharts": "^0.19.0",
@@ -57,7 +57,7 @@
     "build-dev": "atool-build --config conf/webpack.config.js --publicPath /",
     "build-staging": "atool-build --config conf/webpack.config.staging.js --publicPath /",
     "build-release": "atool-build --config conf/webpack.config.release.js --publicPath /",
-    "start": "dora --plugins \"proxy,webpack,webpack-hmr\"",
+    "start": "npm run dev",
     "lint": "eslint --fix --ext .js,.jsx src/components/layout"
   },
   "theme": "./src/theme.js",
