--- a/package.json
+++ b/package.json
@@ -1,71 +1,58 @@
 {
   "private": true,
-  "entry": {
-    "index": "./src/index.js"
+  "name": "dva-admin",
+  "version": "4.0.1",
+  "pre-commit": ["lint"],
+  "scripts": {
+    "dev": "set BROWSER=none&&set HOST=0.0.0.0&&roadhog server",
+    "lint": "eslint --fix --ext .js src",
+    "build": "roadhog build",
+    "build:dll": "roadhog buildDll",
+    "build:new": "node version && roadhog build"
   },
   "dependencies": {
-    "antd": "^2.11.0",
+    "antd": "^2.13.0",
+    "axios": "^0.16.2",
     "classnames": "^2.2.5",
-    "dva": "^1.1.0",
+    "dva": "^1.2.0",
     "dva-loading": "^0.2.0",
     "immutable": "^3.8.1",
     "js-cookie": "^2.1.3",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
+    "nprogress": "^0.2.0",
+    "path-to-regexp": "^1.7.0",
     "prop-types": "^15.5.10",
-    "qs": "^6.2.0",
+    "qs": "^6.5.0",
     "rc-queue-anim": "^0.13.0",
     "rc-tween-one": "^1.0.0",
-    "react": "^15.4.1",
-    "react-countup": "^1.3.0",
-    "react-dom": "^15.4.1",
+    "react": "^15.6.1",
+    "react-countup": "^2.1.1",
+    "react-dom": "^15.6.1",
     "react-lz-editor": "^0.10.16",
+    "react-helmet": "^5.1.3",
     "react-media-player": "^0.6.1",
     "react-motion-ui-pack": "^0.10.2",
-    "recharts": "^0.19.0",
-    "reselect": "^2.5.4"
+    "recharts": "^0.22.4"
   },
   "devDependencies": {
-    "atool-build": "^0.7.6",
-    "axios": "^0.15.3",
-    "babel-eslint": "^6.0.4",
+    "babel-eslint": "^7.2.3",
     "babel-plugin-dev-expression": "^0.2.1",
-    "babel-plugin-dva-hmr": "^0.1.0",
-    "babel-plugin-import": "^1.0.1",
+    "babel-plugin-dva-hmr": "^0.3.2",
+    "babel-plugin-import": "^1.1.1",
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-polyfill": "^6.23.0",
     "babel-runtime": "^6.9.2",
-    "dora": "^0.4.3",
-    "dora-plugin-browser-history": "^0.2.0",
-    "dora-plugin-proxy": "^0.8.5",
-    "dora-plugin-webpack": "^0.8.1",
-    "dora-plugin-webpack-hmr": "^0.2.1",
-    "eslint": "^2.13.1",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-plugin-import": "^1.8.1",
-    "eslint-plugin-jsx-a11y": "^1.4.2",
-    "eslint-plugin-react": "^5.1.1",
-    "glob": "^7.0.5",
+    "eslint": "^4.1.1",
+    "eslint-config-airbnb": "^15.0.2",
+    "eslint-import-resolver-node": "^0.3.1",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.6.1",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.1.0",
     "mockjs": "^1.0.1-beta3",
-    "path-to-regexp": "^1.7.0",
+    "postcss-pxtorem": "^4.0.0",
     "redbox-react": "^1.2.10",
-    "robe-ajax": "^1.0.0",
-    "watchjs": "^0.0.0"
-  },
-  "scripts": {
-    "dev": "dora --plugins \"webpack?config=conf/webpack.config.js&publicPath=/,webpack-hmr,browser-history?index=/src/index.html\"",
-    "build-dev": "atool-build --config conf/webpack.config.js --publicPath /",
-    "build-staging": "atool-build --config conf/webpack.config.staging.js --publicPath /",
-    "build-release": "atool-build --config conf/webpack.config.release.js --publicPath /",
-    "start": "npm run dev",
-    "lint": "eslint --fix --ext .js,.jsx src/components/layout"
-  },
-  "theme": "./src/theme.js",
-  "standard": {
-    "parser": "babel-eslint",
-    "globals": [
-      "location",
-      "localStorage"
-    ]
+    "roadhog": "^1.2.1"
   }
 }
