--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "private": true,
   "name": "dva-admin",
   "version": "4.0.1",
-  "pre-commit": ["lint"],
+  "pre-commit": [
+    "lint"
+  ],
   "scripts": {
     "dev": "set BROWSER=none&&set HOST=0.0.0.0&&roadhog server",
     "lint": "eslint --fix --ext .js src",
@@ -29,8 +31,8 @@
     "react": "^15.6.1",
     "react-countup": "^2.1.1",
     "react-dom": "^15.6.1",
-    "react-lz-editor": "^0.10.16",
     "react-helmet": "^5.1.3",
+    "react-lz-editor": "^0.10.16",
     "react-media-player": "^0.6.1",
     "react-motion-ui-pack": "^0.10.2",
     "recharts": "^0.22.4"
@@ -44,7 +46,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-runtime": "^6.9.2",
     "eslint": "^4.1.1",
-    "eslint-config-airbnb": "^15.0.2",
+    "eslint-config-airbnb": "^15.1.0",
     "eslint-import-resolver-node": "^0.3.1",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-import": "^2.6.1",
