--- a/.eslintignore
+++ b/.eslintignore
@@ -1,4 +1,11 @@
 src/**/*-test.js
 src/public
+
+src/components
+src/constants
+src/models
+src/routes
+src/services
+src/themes
+src/utils
 src
-mock
