--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "immutable": "^3.8.1",
     "js-cookie": "^2.1.3",
     "lodash": "^4.17.4",
+    "mockjs": "^1.0.1-beta3",
     "moment": "^2.17.1",
     "nprogress": "^0.2.0",
     "path-to-regexp": "^1.7.0",
@@ -37,22 +38,22 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
+    "babel-plugin-dev-expression": "^0.2.1",
     "babel-plugin-dva-hmr": "^0.3.2",
     "babel-plugin-import": "^1.1.1",
     "babel-plugin-module-resolver": "^2.7.1",
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.9.2",
-    "eslint": "^3.17.1",
-    "eslint-config-airbnb": "^13.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.8.0",
-    "expect": "^1.20.2",
+    "eslint": "^4.1.1",
+    "eslint-config-airbnb": "^15.0.2",
+    "eslint-import-resolver-node": "^0.3.1",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.6.1",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.1.0",
     "husky": "^0.12.0",
     "less-vars-to-js": "^1.1.2",
-    "mockjs": "^1.0.1-beta3",
-    "postcss-pxtorem": "^4.0.0",
     "redbox-react": "^1.3.2",
     "roadhog": "^1.2.1"
   }
