--- a/.eslintignore
+++ b/.eslintignore
@@ -1,7 +1,12 @@
 src/**/*-test.js
 src/public
 
-src/components
+src/components/DropMenu
+src/components/InputEmail
+src/components/MediaPlayer
+src/components/Search
+src/components/UploadFile
+
 src/constants
 src/models
 src/routes
