--- a/.eslintignore
+++ b/.eslintignore
@@ -2,7 +2,7 @@ src/**/*-test.js
 src/public
 
 src/components/MediaPlayer
-src/components/UploadFile
+src/components/UploadFile/UploadFile.js
 
 src/constants
 src/models
