--- a/.eslintrc
+++ b/.eslintrc
@@ -52,6 +52,8 @@
   "globals": {
     "window": true,
     "location": true,
+    "localStorage": true,
+    "document": true,
     "newband": true,
   }
 }
