--- a/.eslintrc
+++ b/.eslintrc
@@ -36,6 +36,7 @@
     "import/prefer-default-export": 0,
     "react/no-danger": 0,
     "jsx-a11y/no-static-element-interactions": 0,
+    "no-empty-pattern": 1,
   },
   "parser": "babel-eslint",
   "parserOptions": {
