--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "dva-admin",
   "version": "4.0.1",
   "scripts": {
-    "dev": "set BROWSER=none&&set HOST=0.0.0.0&&roadhog server",
+    "dev": "BROWSER=none HOST=0.0.0.0 PORT=8002 roadhog server",
     "build": "roadhog build",
     "build:analyze": "roadhog build --analyze",
     "build:dll": "roadhog buildDll",
