--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.9.2",
+    "copy-webpack-plugin": "^4.0.1",
+    "ejs-loader": "^0.3.0",
     "eslint": "^4.1.1",
     "eslint-config-airbnb": "^15.0.2",
     "eslint-import-resolver-node": "^0.3.1",
@@ -52,7 +54,9 @@
     "eslint-plugin-import": "^2.6.1",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.1.0",
+    "html-webpack-plugin": "^2.29.0",
     "husky": "^0.12.0",
+    "js-beautify": "^1.6.14",
     "less-vars-to-js": "^1.1.2",
     "redbox-react": "^1.3.2",
     "roadhog": "^1.2.1"
