--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "antd": "^2.13.10",
     "axios": "^0.16.2",
     "classnames": "^2.2.5",
-    "dva": "^1.2.0",
+    "dva": "^2.0.1",
     "dva-loading": "^0.2.0",
+    "dva-model-extend": "^0.1.1",
+    "history": "^4.7.2",
     "immutable": "^3.8.1",
     "js-cookie": "^2.1.3",
     "lodash": "^4.17.4",
@@ -26,6 +28,7 @@
     "path-to-regexp": "^1.7.0",
     "prop-types": "^15.5.10",
     "qs": "^6.5.0",
+    "query-string": "^5.0.0",
     "rc-queue-anim": "^0.13.0",
     "rc-tween-one": "^1.3.1",
     "react": "^15.6.1",
@@ -45,6 +48,7 @@
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.9.2",
+    "cross-env": "^5.0.5",
     "copy-webpack-plugin": "^4.0.1",
     "ejs-loader": "^0.3.0",
     "eslint": "^4.1.1",
